--- a/views/home.html
+++ b/views/home.html
@@ -32,35 +32,36 @@
 
     </header>
 
-    <br>
-    <h3>Basado en tu última visita</h3>
-    <br>
 
     <main>
         <section>
+            <br>
+            <h3>Basado en tu última visita</h3>
+            <br>
+
             <article>
                 <img height="300" width="300" src="../public/images/img-cafetera-moulinex.jpg" alt="Imagen de Cafetera">
-                <div>$6.770</div>    
-                <div>40% off</div>
-                <strong>Cafetera Moulinex</strong>        
+                <p>$6.770</p>    
+                <p>40% off</p>
+                <p><strong>Cafetera Moulinex</strong></p>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-macbook-pro-2019.jpg" alt="Imagen de Macbook">
-                <div>$230.000</div>    
-                <div>20% off</div>
-                <strong>MacBook Pro 2019</strong>
+                <p>$230.000</p>    
+                <p>20% off</p>
+                <p><strong>MacBook Pro 2019</strong></p>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-samsung-galaxy-s10.jpg" alt="Imagen de Sam Galaxy S10">
-                <div>$70.500</div>    
-                <div>10% off</div>
-                <strong>Samsung Galaxy S10</strong>        
+                <p>$70.500</p>    
+                <p>10% off</p>
+                <p><strong>Samsung Galaxy S10</strong></p>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-tv-samsung-smart.jpg" alt="Imagen de Sam Smart">
-                <div>$23.200</div>    
-                <div>5% off</div>
-                <strong>SmartTv Samsung 43"</strong>        
+                <p>$23.200</p>    
+                <p>5% off</p>
+                <p><strong>SmartTv Samsung 43"</strong></p>
             </article>
         </section>
     </main>
@@ -69,15 +70,15 @@
         <section>
             <article>
                 <h5>Pagá con tarjeta o en efectivo</h5>
-                <span>Con MercadoLiebreCash, tenés cuotas sin interes con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</span>
+                <p>Con MercadoLiebreCash, tenés cuotas sin interes con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
             </article>
             <article>
                 <h5>Envío gratis desde los $2.500</h5>
-                <span>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. es un beneficio de Mercado Puntos</span>
+                <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. es un beneficio de Mercado Puntos</p>
             </article>
             <article>
                 <h5>Seguridad de principio a fin</h5>
-                <span>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegido.</span>
+                <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegido.</p>
             </article>
             <article>
                 <h5>Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
