--- a/views/home.html
+++ b/views/home.html
@@ -11,8 +11,14 @@
     <header>
         <div><img height="150" width="350" src="../public/images/logo-mercado-liebre.svg" alt="Imagen de ML"></div>
     
-        <div>Lugar para poner barra de busqueda</div>
+        <!-- <div>Lugar para poner barra de busqueda</div> -->
+        <form method="get" action="#">
+            <input type="search" name="q" placeholder="Buscar productos, marcas y mas">
+            <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+        
         <br>
+
         <div>Comprá en cuotas y sin tarjeta de crédito</div>
     
         <nav>
