--- a/views/home.html
+++ b/views/home.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../public/css/styles.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0fce3c0945.js" crossorigin="anonymous"></script>
     <title> ML </title>
 </head>
-<body>
 
+<body>
     <header>
-        <div><img height="150" width="350" src="../public/images/logo-mercado-liebre.svg" alt="Imagen de ML"></div>
+        <div><img height="100" width="300" src="../public/images/logo-mercado-liebre.svg" alt="Imagen de ML"></div>
     
         <!-- <div>Lugar para poner barra de busqueda</div> -->
         <form method="get" action="#">
-            <input type="search" name="q" placeholder="Buscar productos, marcas y mas">
+            <input type="search" name="q" placeholder="Buscar productos, marcas y mas"><br>
             <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
         
-        <br>
+            <p id="compra"><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</p>
 
-        <div>Comprá en cuotas y sin tarjeta de crédito</div>
-    
         <nav>
             <ul>
                 <li><a href="">Ofertas</a></li>
@@ -30,12 +30,17 @@
                 
                 <br>
         
-                <li><a href="">Crea tu cuenta</a></li>
-                <li><a href="">Ingresa</a></li>
-                <li><a href="">Mis compras</a></li>
+                <li><a href="">Crea tu cuenta</a><i class="fa-solid fa-id-card"></i></li>
+                <li><a href="">Ingresa</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a href="">Mis compras</a><i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
 
+        <div class="burger-menu" id="burger">
+            <i class="fas fa-bars"></i>
+        </div>
+
+        <br>
     </header>
 
 
@@ -47,27 +52,27 @@
 
             <article>
                 <img height="300" width="300" src="../public/images/img-cafetera-moulinex.jpg" alt="Imagen de Cafetera">
-                <p>$6.770</p>    
-                <p>40% off</p>
-                <p><strong>Cafetera Moulinex</strong></p>
+                <p id="precios">$6.770</p>    
+                <p id="descuentos">40% off</p>
+                <p id="descripcion"><strong>Cafetera Moulinex</strong></p>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-macbook-pro-2019.jpg" alt="Imagen de Macbook">
-                <p>$230.000</p>    
-                <p>20% off</p>
-                <p><strong>MacBook Pro 2019</strong></p>
+                <p id="precios">$230.000</p>    
+                <p id="descuentos">20% off</p>
+                <p id="descripcion"><strong>MacBook Pro 2019</strong></p>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-samsung-galaxy-s10.jpg" alt="Imagen de Sam Galaxy S10">
-                <p>$70.500</p>    
-                <p>10% off</p>
-                <p><strong>Samsung Galaxy S10</strong></p>
+                <p id="precios">$70.500</p>    
+                <p id="descuentos">10% off</p>
+                <p id="descripcion"><strong>Samsung Galaxy S10</strong></p>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-tv-samsung-smart.jpg" alt="Imagen de Sam Smart">
-                <p>$23.200</p>    
-                <p>5% off</p>
-                <p><strong>SmartTv Samsung 43"</strong></p>
+                <p id="precios">$23.200</p>    
+                <p id="descuentos">5% off</p>
+                <p id="descripcion"><strong>SmartTv Samsung 43"</strong></p>
             </article>
         </section>
     </main>
@@ -75,14 +80,17 @@
     <footer>
         <section>
             <article>
+                <i class="fa-solid fa-credit-card"></i>
                 <h5>Pagá con tarjeta o en efectivo</h5>
                 <p>Con MercadoLiebreCash, tenés cuotas sin interes con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
             </article>
             <article>
+                <i class="fa-solid fa-gift"></i>
                 <h5>Envío gratis desde los $2.500</h5>
                 <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. es un beneficio de Mercado Puntos</p>
             </article>
             <article>
+                <i class="fa-solid fa-user-shield"></i>
                 <h5>Seguridad de principio a fin</h5>
                 <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre protegido.</p>
             </article>
