--- a/views/home.html
+++ b/views/home.html
@@ -19,7 +19,7 @@
             <nav class="main-header-search-bar">
                 <img src="../public/images/logo-mercado-liebre.svg" alt="Imagen de ML" class="logo">
 
-                <form method="get" action="#">
+                <form action="#" method="get">
                     <input type="search" name="q" placeholder="Buscar productos, marcas y mas">
                     <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
