--- a/views/home.html
+++ b/views/home.html
@@ -52,33 +52,43 @@
 
     <main>
         <section>
-            <br>
             <h3>Basado en tu última visita</h3>
-            <br>
 
             <article>
                 <img height="300" width="300" src="../public/images/img-cafetera-moulinex.jpg" alt="Imagen de Cafetera">
-                <p id="precios">$6.770</p>    
-                <p id="descuentos">40% off</p>
-                <p id="descripcion"><strong>Cafetera Moulinex</strong></p>
+                <div class="info-art">
+                    <i class="fa-solid fa-truck"></i>
+                    <p id="precios">$6.770</p>    
+                    <p id="descuentos">40% off</p>
+                    <p id="descripcion">Cafetera Moulinex</p>
+                </div>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-macbook-pro-2019.jpg" alt="Imagen de Macbook">
-                <p id="precios">$230.000</p>    
-                <p id="descuentos">20% off</p>
-                <p id="descripcion"><strong>MacBook Pro 2019</strong></p>
+                <div class="info-art">
+                    <i class="fa-solid fa-truck"></i>
+                    <p id="precios">$230.000</p>    
+                    <p id="descuentos">20% off</p>
+                    <p id="descripcion">MacBook Pro 2019</p>
+                </div>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-samsung-galaxy-s10.jpg" alt="Imagen de Sam Galaxy S10">
-                <p id="precios">$70.500</p>    
-                <p id="descuentos">10% off</p>
-                <p id="descripcion"><strong>Samsung Galaxy S10</strong></p>
+                <div class="info-art">
+                    <i class="fa-solid fa-truck"></i>
+                    <p id="precios">$70.500</p>    
+                    <p id="descuentos">10% off</p>
+                    <p id="descripcion">Samsung Galaxy S10</p>
+                </div>
             </article>
             <article>
                 <img height="300" width="300" src="../public/images/img-tv-samsung-smart.jpg" alt="Imagen de Sam Smart">
-                <p id="precios">$23.200</p>    
-                <p id="descuentos">5% off</p>
-                <p id="descripcion"><strong>SmartTv Samsung 43"</strong></p>
+                <div class="info-art">
+                    <i class="fa-solid fa-truck"></i>
+                    <p id="precios">$23.200</p>    
+                    <p id="descuentos">5% off</p>
+                    <p id="descripcion">SmartTv Samsung 43"</p>
+                </div>
             </article>
         </section>
     </main>
