--- a/public/css/styles-1.css
+++ b/public/css/styles-1.css
@@ -8,6 +8,7 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 .main-header{
     background-color: #eac926; 
     padding: 20px;
@@ -61,6 +62,47 @@ body{
     padding: 5px 0;
     font-size: 17px;
 }
+
+
+
+
+
+main section{
+    background-color: #ebebeb;
+    padding: 0 5%;
+    text-align: center;
+}
+main article{
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.info-art{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 0 10px 10px;
+}
+
+.fa-truck{
+    color: green;
+    padding: 15px;
+    border-radius: 32px;
+    border: solid green;
+    border-width: 1px;
+}
+#precios{
+    font-weight: 400;
+}
+#descuentos{
+    color: green;
+}
+#descripcion{
+    
+}
+
+
+
 
 @media(min-width:768px){
     .main-header-top-bar{
